[package]
categories = ["embedded", "no-std", "hardware-support", "network-programming"]
name = "stm32-eth"
description = "Embedded Rust Ethernet driver for the STM32 MCU series"
license = "Apache-2.0"
authors = ["Astro <astro@spaceboyz.net>"]
version = "0.1.2"
keywords = ["ethernet", "eth", "stm32", "stm32f4"]
edition = "2018"

[dependencies]
drone-core = { version = "0.12.0" }
drone-cortexm = { version = "0.12.0", features = ["bit-band", "floating-point-unit", "memory-protection-unit"] }
drone-stm32-map = { version = "0.12.0", features = ["uart", "gpio"] }
futures = { version = "0.3.0", default-features = false }

aligned = "0.3"
volatile-register = "0.2"
smoltcp = { path = "../smoltcp", default-features = false, features = [
    "socket-raw", "socket-udp", "socket-tcp", "proto-ipv4", "ethernet"] }

[profile.release]
opt-level = 0
debug = true
lto = false
panic = "abort"
